%% Some pre-defined commands: \R, \code, \acronym, \url, \file, \pkg
%% Since R 3.2.0, additional system Rd macros are available,
%% e.g., \CRANpkg and \doi. See the definitions in the file
%% file.path(R.home("share"), "Rd", "macros", "system.Rd")

\name{NEWS}
\title{News for Package 'surveillance'}
\encoding{latin1}


\section{Changes in surveillance version 1.18.0.9000 (UNRELEASED)}{

\subsection{NEW FEATURES}{
  \itemize{
    \item The \code{nowcast()} function with
    \code{method="bayes.trunc.ddcp"} now adds support for negative
    binomial response distribution instead of Poisson. Furthermore,
    additional components of the design matrix for the discrete time
    survival model can be provided, which allows the inclusion of, e.g.,
    day of the week effects. Finally, the order of
    the polynomial created by the change-points in the discrete time
    survival model can now be specified. For further details see the
    work of Guenther et al. (2020) about nowcasting the Covid-19
    outbreak in Bavaria, Germany.

    \item \code{animate.sts()} can position the \code{timeplot} on
    other sides of the map.
  }
}

\subsection{BUG FIXES}{
  \itemize{
    \item Bug fix in the \code{farringtonFlexible()}-function, which for
    the argument \code{thresholdMethod=="nbPlugin"} and
    \code{thresholdMethod=="muan"} unfortunately computed the limit as
    an \code{(1-alpha/2)} prediction interval instead of the documented
    \eqn{(1-alpha)} prediction interval. This affects four threshold
    values in Table 2 of \code{vignette("monitoringCounts")}.
    The default method \code{"delta"} worked as expected.

    \item In \code{hhh4()} models without AR component,
    the matrix of fitted values could lack column names.

    \item Experimental time-varying neighbourhood weights in
    \code{hhh4()} were indexed differently in model fitting and in the
    \code{simulate()} method (undocumented behaviour). Both now use the