@@ -76,9 +76,9 @@ export(fixef, ranef)  # we define corresponding methods for "hhh4" models
 
 ### twinstim-specific
 
-importFrom(spatstat, area.owin, as.im.function, coords.ppp, diameter,
+importFrom(spatstat, area.owin, as.im.function, diameter,
                      diameter.owin, disc, edges, inside.owin, intersect.owin,
-                     is.polygonal, as.polygonal, bdist.points, ppp, runifpoint,
+                     is.polygonal, as.polygonal, bdist.points, ppp,
                      shift.owin, spatstat.options, vertices)
 importFrom(spatstat, marks)
 export(marks)                           # we define an epidataCS-method
