@@ -89,12 +89,10 @@ siaf.constant <- function ()
                           quote(rep.int(1, length(s)/2))),
         ##<- nrow() would take extra time in standardGeneric()
                         envir = .GlobalEnv),
-        ## integration over polydomains is handled specially in twinstim
+        ## integration over polydomains (F) is handled specially in twinstim
         Fcircle = as.function(c(alist(r=, pars=NULL, type=NULL),
                                 quote(pi*r^2)),
                               envir = .GlobalEnv),
-        ## simulation will be handled specially in simEpidataCS, this is only
-        ## included here for completeness
         simulate = as.function(c(alist(n=, pars=NULL, type=NULL, ub=),
                                  quote(runifdisc(n, ub))),
                                envir = getNamespace("surveillance")),
